--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
   "engines": {
     "vscode": "^1.100.0"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/sahilmtayade/pastel-colors-theme.git"
+  },
   "categories": [
     "Themes"
   ],
